errorlogs/1516472916410-Program3- DeterminePrimes.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
145 INFO: PyInstaller: 3.3.1
146 INFO: Python: 3.4.4
146 INFO: Platform: Windows-XP-5.1.2600-SP3
151 INFO: wrote Z:\p2e\Program3- DeterminePrimes.spec
157 INFO: UPX is not available.
157 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
165 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516472916410', 'Z:\\p2e']
166 INFO: checking Analysis
166 INFO: Building Analysis because out00-Analysis.toc is non existent
166 INFO: Initializing module dependency graph...
174 INFO: Initializing module graph hooks...
178 INFO: Analyzing base_library.zip ...
6714 INFO: Processing pre-find module path hook   distutils
10052 INFO: running Analysis out00-Analysis.toc
10544 INFO: Caching module hooks...
10573 INFO: Analyzing Z:\p2e\workingdir\1516472916410\Program3- DeterminePrimes.py

Syntax error in Z:\p2e\workingdir\1516472916410\Program3- DeterminePrimes.py
  File "Z:\p2e\workingdir\1516472916410\Program3- DeterminePrimes.py", line 33
     print(f"There are {count} prime numbers less than {number_bound}.")
                                                                      ^
 SyntaxError: invalid syntax

